# hydra

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  results.tsv
.claude/skills/autoresearch/: SKILL.md
docs/: design-next-steps.md  experiment-roadmap.md
hydra/data/: beir_loader.py  preference_pairs.py
hydra/eval/: colbert_evaluator.py  evaluator.py  metrics.py
hydra/hypernet/: __init__.py  colbert_head_generator.py  encoder.py  head_generator.py  task_card.py
hydra/student/: __init__.py  colbert_retriever.py  conditioned_retriever.py
hydra/teachers/: __init__.py  bm25.py  cross_encoder.py  dense.py  ensemble.py  jina_reranker.py
hydra/training/: colbert_trainer.py  pairwise_loss.py  trainer.py
scripts/: run_colbert_experiment.py  run_minimal_experiment.py
